plugins {
    id 'java-library'
    id 'distribution'
}

dependencies {

    // implementation "com.github.javaparser:javaparser-core-serialization:${javaparser_version}"
    // implementation "com.github.javaparser:javaparser-core:${javaparser_version}"
    // implementation "com.github.javaparser:javaparser-symbol-solver-core:${javaparser_version}"
    // implementation "com.squareup:javapoet:${javapoet_version}"

    implementation project(":rok-common")
}


sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

compileJava {
    doFirst {
        options.compilerArgs = [
                '--enable-preview',
                '--module-path', classpath.asPath,
                '--add-exports', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
                '--add-exports', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
                '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
                '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED',
        ]
        classpath = files()
    }
}

